Fix for issue #1059. Switch from custom opacity handling to css transition method for hiding scrollbars.

--- a/src/css/structure/modules/infragistics.ui.scroll.css
+++ b/src/css/structure/modules/infragistics.ui.scroll.css
@@ -20,11 +20,11 @@
 .igscroll-content {
 	overflow: hidden;
 	position: absolute;
-	-webkit-transform: translatez(0);
-	-moz-transform: translatez(0);
-	-ms-transform: translatez(0);
-	-o-transform: translatez(0);
-	transform: translatez(0);
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
 }
 
 .igscroll-select-disabled {
@@ -52,19 +52,21 @@
 .igscroll-varrow {
 	width: 15px;
 	height: 15px;
+	opacity: 0.9;
+	transition: opacity .1s linear;
 }
 
 .igscroll-varrow:hover {
 	background: #999999;
 }
 
-.igscroll-varrow:active { 
+.igscroll-varrow:active {
 	background: #757575;
 }
 
 .igscroll-varrow:before {
 	width: 15px;
-	height: 15px;		
+	height: 15px;
 	position: absolute;
 	content: '';
 	background-image: url('../images/igScroll/up.png');
@@ -72,7 +74,30 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	pointer-events: none;
-}		
+	opacity: 0.9;
+	transition: opacity .1s linear;
+}
+
+.igscroll-varrow-hidden {
+	width: 15px;
+	height: 15px;
+	opacity: 0;
+	transition: opacity .1s linear;
+}
+
+.igscroll-varrow-hidden:before {
+	width: 15px;
+	height: 15px;
+	position: absolute;
+	content: '';
+	background-image: url('../images/igScroll/up.png');
+	background-size: 9px 9px;
+	background-repeat: no-repeat;
+	background-position: center;
+	pointer-events: none;
+	opacity: 0;
+	transition: opacity .1s linear;
+}
 
 /* Arrow Up */
 .igscroll-uparrow:before {
@@ -81,7 +106,7 @@
 	-ms-transform: rotate(0);
 	-o-transform: rotate(0);
 	transform: rotate(0);
-}		
+}
 
 .igscroll-uparrow-active:before {
 	background-image: url('../images/igScroll/up_active.png');
@@ -123,12 +148,30 @@
 .igscroll-vdrag-thin {
 	left: 5px;
 	width: 5px;
+	opacity: 0.9;
+	transition-property: left, width, opacity;
+	transition-duration: .1s;
+	transition-timing-function: ease-in;
 }
 
 .igscroll-vdrag-big {
 	left: 3px;
 	width: 9px;
+	opacity: 0.9;
+	transition-property: left, width, opacity;
+	transition-duration: .1s;
+	transition-timing-function: ease-in;
 }
+
+.igscroll-vdrag-hidden {
+	left: 5px;
+	width: 5px;
+	opacity: 0;
+	transition-property: left, width, opacity;
+	transition-duration: .1s;
+	transition-timing-function: ease-in;
+}
+
 
 .igscroll-vdrag:hover { 
 	background: #737373;
@@ -158,6 +201,8 @@
 	width: 15px;
 	height: 15px;
 	float: left;
+	opacity: 0.9;
+	transition: opacity .1s linear;
 }
 
 .igscroll-harrow:hover {
@@ -170,7 +215,7 @@
 
 .igscroll-harrow:before {
 	width: 15px;
-	height: 15px;		
+	height: 15px;
 	position: absolute;
 	content: '';
 	background-image: url('../images/igScroll/up.png');
@@ -178,8 +223,31 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	pointer-events: none;
-}		
+	opacity: 0.9;
+	transition: opacity .1s linear;
+}
 
+.igscroll-harrow-hidden {
+	width: 15px;
+	height: 15px;
+	float: left;
+	opacity: 0;
+	transition: opacity .1s linear;
+}
+
+.igscroll-harrow-hidden:before {
+	width: 15px;
+	height: 15px;
+	position: absolute;
+	content: '';
+	background-image: url('../images/igScroll/up.png');
+	background-size: 9px 9px;
+	background-repeat: no-repeat;
+	background-position: center;
+	pointer-events: none;
+	opacity: 0;
+	transition: opacity .1s linear;
+}
 /* Arrow Left */
 .igscroll-leftarrow:before {
 	-webkit-transform: rotate(-90deg);
@@ -187,7 +255,7 @@
 	-ms-transform: rotate(-90deg);
 	-o-transform: rotate(-90deg);
 	transform: rotate(-90deg);
-}	
+}
 
 .igscroll-leftarrow-active:before {
 	background-image: url('../images/igScroll/up_active.png');
@@ -205,7 +273,7 @@
 	-ms-transform: rotate(90deg);
 	-o-transform: rotate(90deg);
 	transform: rotate(90deg);
-}		
+}
 
 .igscroll-rightarrow-active:before {
 	background-image: url('../images/igScroll/up_active.png');
@@ -229,11 +297,28 @@
 .igscroll-hdrag-thin {
 	top: 5px;
 	height: 5px;
+	opacity: 0.9;
+	transition-property: top, height, opacity;
+	transition-duration: .1s;
+	transition-timing-function: ease-in;
 }
 
 .igscroll-hdrag-big {
 	top: 3px;
 	height: 9px;
+	opacity: 0.9;
+	transition-property: top, height, opacity;
+	transition-duration: .1s;
+	transition-timing-function: ease-in;
+}
+
+.igscroll-hdrag-hidden {
+	top: 5px;
+	height: 5px;
+	opacity: 0;
+	transition-property: top, height, opacity;
+	transition-duration: .1s;
+	transition-timing-function: ease-in;
 }
 
 .igscroll-hdrag:hover { 
